Add support observability tooling
